AUX_SOURCE_DIRECTORY(. KHALA_EXAMPLE_SRCS)
MESSAGE(STATUS "examples/HelloKhala/src:" ${KHALA_EXAMPLE_SRCS})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/examples/HelloKhala/include)
#set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
SET(LIBS ${PROJECT_SOURCE_DIR}/examples/HelloKhala/libs)
MESSAGE(STATUS "HelloKhala lib path:" ${LIBS})
LINK_DIRECTORIES(${LIBS})
add_executable(HelloKhala ${KHALA_EXAMPLE_SRCS})
target_link_libraries(HelloKhala Khala muduo_net muduo_base json pthread)
